Login: Ensure the text doesn't wrap around the mailinglist checkbox on the registration screen.
See #148


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@4538 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-login/stylesheets/login.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-login/stylesheets/login.css
@@ -360,8 +360,12 @@ body.route-register .message.error .avatar {
 
 form .login-mailinglist label {
 	font-size: 12px;
-	line-height: 1;
 	cursor: pointer;
+}
+
+form .login-mailinglist label input {
+	float: left;
+	margin: 0.5em 0.5em 0 0;
 }
 
 @media (max-width:375px) {
